--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    ext.kotlin_version = '1.3.50'
+}
+
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
 }
@@ -11,6 +16,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
 }
 
 compileKotlin {
