feat(GC): GC, Reference 相关

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ group 'cc.wenmin92'
 version '0.1'
 
 repositories {
+    maven { url 'https://maven.aliyun.com/repository/public' }
     mavenCentral()
 }
 
