--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    
+    // apache lib.poi
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    implementation 'org.apache.lib.poi:lib.poi:4.1.1'
+    implementation 'org.apache.lib.poi:lib.poi-scratchpad:4.1.1'
 }
 
 compileKotlin {
