--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.61'
+
+    repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
+    }
 }
 
-
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'cc.wenmin92'
@@ -18,11 +25,11 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
-    
+
     // apache lib.poi
     // https://mvnrepository.com/artifact/org.apache.poi/poi
-    implementation 'org.apache.lib.poi:lib.poi:4.1.1'
-    implementation 'org.apache.lib.poi:lib.poi-scratchpad:4.1.1'
+    implementation 'org.apache.poi:poi:4.1.1'
+    implementation 'org.apache.poi:poi-scratchpad:4.1.1'
 }
 
 compileKotlin {
