--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,18 @@ buildscript {
 }
 
 plugins {
+    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'cc.wenmin92'
 version '0.1'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    withSourcesJar()
+}
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/public' }
@@ -29,7 +36,23 @@ dependencies {
     // apache lib.poi
     // https://mvnrepository.com/artifact/org.apache.poi/poi
     implementation 'org.apache.poi:poi:4.1.1'
+    implementation 'org.apache.poi:poi-ooxml:4.1.1'
     implementation 'org.apache.poi:poi-scratchpad:4.1.1'
+
+    // XDocReport
+    // https://mvnrepository.com/artifact/fr.opensagres.xdocreport/fr.opensagres.xdocreport.converter.docx.xwpf
+    // implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2'
+    implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2'
+    // implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.core:2.0.2'
+    // implementation 'fr.opensagres.xdocreport:fr.opensagres.xdocreport.itext.extension:2.0.2'
+
+    // XDocReport - itext5
+    // implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf.itext5:2.0.2'
+    // https://mvnrepository.com/artifact/com.itextpdf/itextpdf
+    // implementation 'com.itextpdf:itextpdf:5.5.13.1'
+    // implementation 'com.itextpdf:itext-pdfa:5.5.13.1'
+
+
 }
 
 compileKotlin {
