--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,11 @@
 kotlin.code.style=official
+
+#http proxy setup
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=1081
+systemProp.http.nonProxyHosts=*.nonproxyrepos.com|localhost
+
+#https proxy setup
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=1081
+systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
